--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@homebridge-plugins/homebridge-camera-ffmpeg",
+  "name": "@demonfromrussia/homebridge-camera-ffmpeg",
   "displayName": "Homebridge Camera FFmpeg",
   "type": "module",
   "version": "4.0.1",
@@ -9,10 +9,7 @@
   },
   "contributors": [
     {
-      "name": "Sunoo"
-    },
-    {
-      "name": "Khaos Tian"
+      "name": "DemonFromRussia"
     }
   ],
   "publishConfig": {
@@ -21,7 +18,7 @@
   "license": "ISC",
   "maintainers": [
     {
-      "name": "Homebridge"
+      "name": "DemonFromRussia"
     }
   ],
   "funding": [
@@ -44,10 +41,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/homebridge-plugins/homebridge-camera-ffmpeg.git"
+    "url": "git://github.com/DemonFromRussia/homebridge-camera-ffmpeg.git"
   },
   "bugs": {
-    "url": "http://github.com/homebridge-plugins/homebridge-camera-ffmpeg/issues"
+    "url": "http://github.com/DemonFromRussia/homebridge-camera-ffmpeg/issues"
   },
   "keywords": [
     "homebridge-plugin",
